--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: make -C 3_Implementation/version2
+      run: make -C 3_Implementation/src
    
 
     - name: make check
